# MUedit2

./: .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml
docs/: BACKEND_ARCHITECTURE.md  FRONTEND_ARCHITECTURE.md  SAVED_FILES.md  WORKFLOWS.md  loader-registry.md  saved-files.md  user-guide.md
frontend/: app.js  index.html  package.json  style.css
frontend/src/: config.js  dom.js  http.js  plots.js  session.js  state.js
frontend/src/api/: binary_payloads.js
frontend/src/app/: container.js  deps.js  dom.js  http.js  state.js
frontend/src/app/services/: editing_service.js  error_service.js  file_session.js  layout.js  navigation.js  ui.js
frontend/src/app/stages/: edit_stage.js  import_stage.js  layout_stage.js  qc_stage.js  run_stage.js
frontend/src/contracts/: payloads.js
frontend/src/controllers/: bids_form.js  layout.js  mu_explorer.js  qc_canvas.js  workflow.js
frontend/src/decomp/: explorer.js  run.js
frontend/src/editing/: explorer.js  operations.js
frontend/src/features/: bids_ui.js  edit.js  events.js  grid_names.js  navigation.js  qc.js  run.js  run_explorer.js
frontend/src/io/: bids.js
frontend/src/setup/: edit.js  import.js  layout.js  run.js
frontend/src/signal/: qc.js
frontend/src/state/: actions.js  selectors.js  transitions.js
frontend/src/view/: bids_renderer.js  edit_canvas.js  plots.js  qc_renderer.js
notebooks/: bids_dataset_metadata.ipynb
python/src/adapt_decomp/: __init__.py  adaptation.py  config.py  data_structures.py  io.py  loaders.py  plots.py  preprocessing.py  utils.py
python/src/muedit/: __init__.py  cli.py  editing.py  models.py  utils.py
scripts/: run_MUedit.ps1  run_MUedit.sh
(+51 files in other folders)
